bk_ida/gccida/c2/split_all_insns
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3227:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3227:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3245:1: error: use of undeclared identifier 'v8'
v8 = split_insn( v3); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3247:6: error: use of undeclared identifier 'v8'
if ( v8 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3249:17: error: use of undeclared identifier 'v8'
if ( *( _WORD *)v8 == 35 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3253:1: error: use of undeclared identifier 'v8'
v8 = ( rtx)v8[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3254:20: error: use of undeclared identifier 'v8'
while ( *( _WORD *)v8 == 35 ); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/recog.c:3262:6: error: use of undeclared identifier 'v8'
v6 = v8; 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_all_insns/src/obj/recog.o] Error 1
